@startuml
interface IPrinter {
    +int getId()
    +String getName()
    +boolean printFits(Print)
    +int calculatePrintTime(Print)
}

interface ISpool {
    +int getId()
    +double getLength()
    +String getColor()
    +FilamentType getFilamentType()
    +boolean reduceLength(double)
}


abstract class Printer implements IPrinter {
    -int id
    -String name
    -String manufacturer
    +int getId()
    +String getName()
    +boolean printFits(Print)
    +int calculatePrintTime(Print)
    +String toString()
}

class StandardFDM extends Printer {
    -final int maxX
    -final int maxY
    -final int maxZ
    -ISpool currentSpool
    +StandardFDM(int id, String printerName, String manufacturer, int maxX, int maxY, int maxZ)
    +void setCurrentSpool(ISpool)
    +ISpool getCurrentSpool()
    +ISpool[] getCurrentSpools()
    +boolean printFits(Print)
    +int calculatePrintTime(Print)
    +String toString()
}

class MultiColorPrinter extends Printer {
    -int maxColors
    -List<ISpool> spools
    +void setCurrentSpools(List<ISpool>)
    +boolean printFits(Print)
    +int calculatePrintTime(Print)
    +String toString()
}
class Print {
    -String name
    -int height
    -int width
    -int length
    -List<Double> filamentLength
    -int printTime
    +String getName()
    +int getHeight()
    +int getWidth()
    +int getLength()
    +List<Double> getFilamentLength()
    +int getPrintTime()
}


class Spool implements ISpool {
    -final int id
    -final String color
    -final FilamentType filamentType
    -double length
    +int getId()
    +double getLength()
    +String getColor()
    +FilamentType getFilamentType()
    +boolean reduceLength(double)
}


class PrinterManager {
    -List<IPrinter> printers
    +void addPrinter(IPrinter printer)
    +List<IPrinter> getAvailablePrinters()
}

class TaskManager {
    -List<PrintTask> pendingTasks
    -Map<IPrinter, PrintTask> runningTasks
    +void addTask(PrintTask task)
    +void assignTasks(PrinterManager printerManager)
    +void completeTask(IPrinter printer)
    +void handleTaskFailure(IPrinter printer)
}

class SpoolManager {
    -List<ISpool> spools
    +List<ISpool> getSpools()
    +void addSpool(ISpool)
    +ISpool getSpoolById(int)
}

class PrintTask {
    -Print print
    -List<String> colors
    -FilamentType filamentType
    +String toString()
    +List<String> getColors()
    +FilamentType getFilamentType()
    +Print getPrint()
}

enum FilamentType {
    PLA
    PETG
    ABS
}

PrinterManager o-- IPrinter
TaskManager o-- IPrinter
TaskManager o-- PrintTask
SpoolManager o-- ISpool
PrintTask o-- Print
PrintTask o-- FilamentType
Spool <|-- ISpool
Spool o-- FilamentType
StandardFDM <|-- Printer
MultiColorPrinter <|-- Printer
@enduml
